--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,5 +1,5 @@
 [theme]
-primaryColor = '#DCFF93'
+primaryColor = '#85B0D5'
 backgroundColor = '#363845'
 secondaryBackgroundColor = '#262730' 
 textColor = '#FFFFFF'
