--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,13 @@
 plotly==5.13.0
 plotly-express==0.4.0
-pandas==1.5.3
+pandas==2.2.2
+numpy==2.0.1
 folium==0.14.0
-streamlit-folium==0.11.0
+streamlit-folium==0.22.0
 streamlit-extras==0.2.5
 streamlit==1.37.1
 XlsxWriter==3.0.8
 openpyxl
+pyarrow==17.0.0
 click<=8.0.4
 streamlit
