change primary color

--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,5 +1,5 @@
 [theme]
-primaryColor = '#DC6A76'
+primaryColor = '#4989C1'
 backgroundColor = '#363845'
 secondaryBackgroundColor = '#262730' 
 textColor = '#FFFFFF'
